Fixed a bug when the page would jump to top while manually scrolling over the brain part.

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -7,6 +7,7 @@ html, body {
 	color:#fff;
 	font-family: 'Pacifico', cursive;
 	background-color: #FBCEB1;
+	overflow-x:hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
